--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
     "build": "tsc"
   },
